@@ -718,11 +718,12 @@ class Linker {
 
 	/** @todo document */
 	function tocList($toc) {
+		global $wgJsMimeType;
 		return "<table id='toc' class='toc'><tr><td>" 
 			   . "<div id='toctitle'><h2>" . wfMsgForContent('toc') . "</h2></div>\n"
 		     . $toc
 				 . "</ul>\n</td></tr></table>\n"
-				 . '<script type="text/javascript">'
+				 . '<script type="'.$wgJsMimeType.'">'
 				 . ' if (window.showTocToggle) {'
 				 . ' var tocShowText = "' . wfEscapeJsString( wfMsgForContent('showtoc') ) . '";'
 				 . ' var tocHideText = "' . wfEscapeJsString( wfMsgForContent('hidetoc') ) . '";'
